# Five_SDL

./: .gitignore  CMakeLists.txt  DEV-build.bat  Five.dev  Five.sln  README  README.md
Five/: Five.rc  Game.cpp  Game.h  SDL_dev.vcxproj  SDL_dev.vcxproj.filters  action.h  chess.cpp  chess.h  handleDraw.h  handleEvent.h  main.cpp  res.h  resource.h  timer.h
Five/res/file/: model.five
Five_AI/: Five_AI.h  Five_AI.rc  Five_AI.vcxproj  Five_AI.vcxproj.filters  main.cpp  resource.h
SDL-1.2.14/lib/: SDL_ttf.lib
